@@ -1,2 +1,3 @@
 class PDF::Font::Loader::Enc {
+    method bpc { 1 }
 }
