@@ -132,4 +132,9 @@ is $cmap-obj.decode("\x24\x25\x26", :str), 'ABC', "decode:str";
 is-deeply $cmap-obj.decode("\x5e"), Buf[uint32].new(0x6669), "decode ligature";
 $cmap-obj.differences = [0x42, 'C'];
 is $cmap-obj.decode("\x24\x25\x42", :str), 'ABC', "decode differences";
+is $cmap-obj.decode("\xA9", :str), '', "decode unknown";
+my Str $dec = "AB©C\c[DROMEDARY CAMEL]\c[BACTRIAN CAMEL]";
+my Str $enc = "\x24\x25\xA9\x42\x1\x2";
+is-deeply $cmap-obj.encode($dec, :str), $enc, "adaptive encoding";
+is-deeply $cmap-obj.decode($enc, :str), $dec, "adaptive decoding";
 done-testing;
